Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/enum/FauxSpecialEnum1.out
FauxSpecialEnum1.java:14:5: compiler.err.does.not.override.abstract: compiler.misc.anonymous.class: FauxSpecialEnum1$2, test(), compiler.misc.anonymous.class: FauxSpecialEnum1$2
1 error
